tests/esproposal_export_star_as.enable/esproposal_export_star_as.enable.exp
Error ----------------------------------------------------------------------------------------------------- dest.js:6:17

Cannot assign `source.num` to `b` because number [1] is incompatible with string [2]. [incompatible-type]

   dest.js:6:17
   6| var b: string = source.num; // Error: num ~> string
                      ^^^^^^^^^^

References:
   source.js:4:20
   4| export const num = 42;
                         ^^ [1]
   dest.js:6:8
   6| var b: string = source.num; // Error: num ~> string
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dest.js:9:17

Cannot assign `source.str` to `d` because string [1] is incompatible with number [2]. [incompatible-type]

   dest.js:9:17
   9| var d: number = source.str; // Error: num ~> string
                      ^^^^^^^^^^

References:
   source.js:3:20
   3| export const str = 'asdf';
                         ^^^^^^ [1]
   dest.js:9:8
   9| var d: number = source.str; // Error: num ~> string
             ^^^^^^ [2]



Found 2 errors
